--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
+    "config": "^3.3.9",
     "express": "^4.18.2",
+    "joi": "^17.8.3",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.10.0",
     "winston": "^3.8.2"
   }
 }
